tests/baselines/reference/qualify.errors.txt
qualify.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(3,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(8,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(9,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(16,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(20,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(21,13): error TS2322: Type 'number' is not assignable to type 'I'.
qualify.ts(28,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(29,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(30,13): error TS2322: Type 'number' is not assignable to type 'I2'.
qualify.ts(34,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(35,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(40,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
qualify.ts(45,13): error TS2741: Property 'zeep' is missing in type 'I4' but required in type 'I3'.
qualify.ts(46,13): error TS2740: Type 'I4' is missing the following properties from type 'I3[]': length, pop, push, concat, and 16 more.
qualify.ts(47,13): error TS2322: Type 'I4' is not assignable to type '() => I3'.
  Type 'I4' provides no match for the signature '(): I3'.
qualify.ts(48,13): error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
  Type 'I4' provides no match for the signature '(k: I3): void'.
qualify.ts(49,13): error TS2741: Property 'k' is missing in type 'I4' but required in type '{ k: I3; }'.
qualify.ts(58,5): error TS2741: Property 'p' is missing in type 'I' but required in type 'T.I'.


==== qualify.ts (19 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export var m=0;
        export module N {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export var n=1;
        }
    }
    
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module N {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            var y=m;
            var x=n+y;
        }
    }
    
    
    module T {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface I {
            p;
        }
        export module U {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            var z:I=3;
                ~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
            export interface I2 {
                q;
            }
        }
    }
    
    module Peer {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module U2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            var z:T.U.I2=3;
                ~
!!! error TS2322: Type 'number' is not assignable to type 'I2'.
        }
    }
    
    module Everest {
           ~~~~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module K1 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface I3 {
                zeep;
            }
        }
        export module K2 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface I4 {
                z;
            }
            var v1:I4;
            var v2:K1.I3=v1;
                ~~
!!! error TS2741: Property 'zeep' is missing in type 'I4' but required in type 'I3'.
!!! related TS2728 qualify.ts:37:13: 'zeep' is declared here.
            var v3:K1.I3[]=v1;
                ~~
!!! error TS2740: Type 'I4' is missing the following properties from type 'I3[]': length, pop, push, concat, and 16 more.
            var v4:()=>K1.I3=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '() => I3'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(): I3'.
            var v5:(k:K1.I3)=>void=v1;
                ~~
!!! error TS2322: Type 'I4' is not assignable to type '(k: I3) => void'.
!!! error TS2322:   Type 'I4' provides no match for the signature '(k: I3): void'.
            var v6:{k:K1.I3;}=v1;
                ~~
!!! error TS2741: Property 'k' is missing in type 'I4' but required in type '{ k: I3; }'.
!!! related TS2728 qualify.ts:49:17: 'k' is declared here.
        }
    }
    
    interface I {
        k;
    }
    
    var y:I;
    var x:T.I=y;
        ~
!!! error TS2741: Property 'p' is missing in type 'I' but required in type 'T.I'.
!!! related TS2728 qualify.ts:18:9: 'p' is declared here.
    
    